trying to stop flicker on iphone

--- a/css/style-aos-v3.css
+++ b/css/style-aos-v3.css
@@ -28,6 +28,7 @@ body {
     /* Just to prevent flickering on iphone safari */
     -webkit-transform:translate3d(0,0,0);
     -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
   }
 
 h2 {
